<resources>
    <string name="app_name">Todoshka</string>
    <string name="settings_description">Settings</string>
    <string name="todo_badge">To-Do</string>
    <string name="search_hint">Try to find task…</string>
    <string name="search_button">Search</string>
    <string name="all_task">All Task</string>
    <string name="empty_taskbox">Your task box is empty.</string>
    <string name="add_task">Add Task</string>
    <string name="nothing_found">Nothing found</string>
    <string name="try_different_search">Try a different search term</string>
    <string name="empty_taskbox_hint">Once you create new task you\'ll\nsee it listed here</string>
    <string name="what_name">What is Your Name ?</string>
    <string name="what_name_hint">Please provide your name, which we\'ll use for display and personalize your to-do experience.</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="get_start">Get Start</string>
    <string name="settings">Settings</string>
    <string name="customize">Customize</string>
    <string name="edit_info">Edit Your Info</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="arrow_right">arrow right</string>
    <string name="edit_icon">edit icon</string>
    <string name="avatar">avatar</string>
    <string name="arrow_back">arrow back</string>
    <string name="you_can_change_your_name_and_avatar">You can change your Name and Avatar</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="character">Character</string>
    <string name="input_new_task_here">Input new task here…</string>
    <string name="add_new_task">Add New task</string>
    <string name="task_priority">Task priority</string>
    <string name="arrow_down">arrow down</string>
    <string name="select_category">Select Category</string>
    <string name="category_name">Category Name</string>
    <string name="input_category_name_here">Input Category name here...</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="priority">Priority</string>
    <string name="priority_icon">priority icon</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="do_you_really_want_to_delete_this_task_this_process_can_t_be_undone">Do you really want to delete this task?\nthis process can\'t be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="you_can_change_remove_and_create_categories">You can change, remove and create Categories.</string>
    <string name="create_new_category">Create new Category</string>
    <string name="are_you_sure_category">Are You Sure?</string>
    <string name="delete_category_confirmation">Do you really want to delete this category and all related tasks? This process can\'t be undone.</string>
    <string name="losung">Just Your Tasks.\nNo Clutter.</string>
    <string name="short_name">The name must contain at least 5 letters</string>
    <string name="empty_category">Category cannot be empty</string>
    <string name="empty_task">Task cannot be empty</string>
    <string name="no_category">No Category</string>
    <string name="at_least_one_category">You must have at least one category.</string>
    <string name="cannot_open_link">No application found to open the link</string>
    <string name="share_via">Share Todoshka via…</string>
    <string name="share_message">Hey! Check out this awesome to-do app I\'m using: Todoshka. It really helps me stay organized! Get it here:</string>
    <string name="cannot_load_task">Cannot load info about task</string>
    <string name="cannot_remove_task">Cannot remove task</string>
    <string name="version">Version:</string>
    <string name="task">task</string>
    <string name="clean_icon">Clean Icon</string>
    <string name="remove_completed_tasks">Remove Completed Tasks</string>
    <string name="delete_completed_tasks_confirmation">Do you really want to delete all completed tasks? This process can\'t be undone.</string>
    <string name="completed_tasks_removed">Completed tasks removed</string>
</resources>