<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_void"
    android:id="@+id/main_activity_screen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/recoleta_family"
        tools:text="Metimol"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tvTodoBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-25dp"
        android:translationY="-8dp"
        android:background="@drawable/badge_todo"
        android:contentDescription="@string/todo_badge"
        android:paddingLeft="8dp"
        android:paddingTop="2dp"
        android:paddingRight="8dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:contentDescription="@string/settings_description"
        android:src="@drawable/ic_setting"
        android:background="@drawable/circular_stroke_background"
        app:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_stroke_background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@color/terminal_steel"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivSearchIcon"
            app:layout_constraintEnd_toStartOf="@+id/ivClearIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivClearIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="12dp"
            android:rotation="45"
            android:src="@drawable/ic_plus"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/server_chassis" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <HorizontalScrollView
        android:id="@+id/chipScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/chipContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/chipAdd"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/dash_rectangle_stroke_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="4dp"
                android:paddingRight="20dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_plus"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:contentDescription="@string/add_new_category" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAllTask"
                style="@style/CategoryChip"
                android:layout_marginStart="8dp"
                android:text="@string/all_task"
                android:checkable="true" />

        </LinearLayout>
    </HorizontalScrollView>


    <LinearLayout
        android:id="@+id/emptyStateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipScrollView">

        <ImageView
            android:id="@+id/ivEmptyState"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:src="@drawable/ic_empty_list" />

        <TextView
            android:id="@+id/tvEmptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_taskbox"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmptySubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/empty_taskbox_hint"
            android:textAlignment="center"
            android:textColor="#9E9E9E"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:visibility="visible"
        tools:listitem="@layout/item_task"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/chipScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_task"
        android:src="@drawable/ic_plus"
        app:backgroundTint="@color/purple"
        app:borderWidth="0dp"
        app:tint="@android:color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:maxImageSize="35dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
