<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_info_activity_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_void"
    tools:context=".EditInfoActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circular_stroke_background"
        android:contentDescription="@string/arrow_back"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/ivDone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circular_stroke_background"
        android:padding="8dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Your full name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_stroke_background"
        android:hint="@string/enter_name"
        android:inputType="textPersonName|textCapWords"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/terminal_steel"
        android:textSize="16sp"
        tools:text="Metimol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabel" />

    <TextView
        android:id="@+id/tvCharacterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/character"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <LinearLayout
        android:id="@+id/llCharacterContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tvCharacterLabel"
        app:layout_constraintTop_toBottomOf="@id/tvCharacterLabel">

        <LinearLayout
            android:id="@+id/llAvatarWomen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivAvatarWomen"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_women_avatar"
                android:padding="1dp"
                app:shapeAppearanceOverlay="@style/CircleImageView" />

            <TextView
                android:id="@+id/tvAvatarWomen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/women"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAvatarMen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivAvatarMen"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_men_avatar"
                android:padding="1dp"
                app:shapeAppearanceOverlay="@style/CircleImageView" />
            <TextView
                android:id="@+id/tvAvatarMen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/men"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoremIpsum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/you_can_change_your_name_and_avatar"
        android:textAlignment="center"
        android:textColor="@color/terminal_steel"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>